minor edit maptiles_geoext_map.html

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -301,7 +301,7 @@ Ext.onReady(function (){
             format:  'image/png',
             bbox: stored_layer["bbox"],
             transparent: true,
-            opacity: 0.3.
+            opacity: 0.3
         },
         {
             buffer: 0,
