added if-else for jurisdiction zoom

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -332,7 +332,11 @@ Ext.onReady(function (){
     map.addLayer(highlight_layer);
     //map.addLayers([mq_layer,tile_layer,highlight_layer, jurisdiction_layer]);
     
-    map.zoomToExtent(jurisdiction_layer.getExtent());
+    if(jurisdiction != "" ){
+        map.zoomToExtent(jurisdiction_layer.getExtent());
+    }else{
+        map.zoomToExtent(tile_layer.getExtent());
+    }
     
     var items = [];
     var config = {
