debugging edit maptiles_geoext_map.html

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -333,7 +333,7 @@ Ext.onReady(function (){
     //map.addLayers([mq_layer,tile_layer,highlight_layer, jurisdiction_layer]);
     
     if(jurisdiction != "" ){
-        map.zoomToExtent(jurisdiction_layer.getExtent());
+        //map.zoomToExtent(jurisdiction_layer.getExtent());
     }else{
         map.zoomToExtent(tile_layer.getExtent());
     }
