debugging edit maptiles_geoext_map.html

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -237,7 +237,7 @@ var vector_style_map = new OpenLayers.StyleMap({
     'default': vector_style
 });
 
-var jurisdiction = "{{jurisdiction_}}";
+var jurisdiction = "{{jurisdiction}}";
 var jurisdiction_layer = null;
 
 Ext.onReady(function (){
