--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -29,7 +29,7 @@
 </div>
 <div class="row">
     <div class="col-md-9">
-		<div id="embedded_map" class="mrg-btm">
+		<div id="embedded_map" class="mrg-btm" onload="init();">
 			<div id="preview_map"></div>
 		</div>
     </div>
