--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -221,23 +221,6 @@ var jurisdiction = "{{jurisdiction}}";
 var jurisdiction_layer = null;
 var jurisdiction_features = [];
 
-function init(){
-    console.log(jurisdiction);
-    if (jurisdiction != ""){
-        var jurisdiction_wfs = wfs_proto_creator(jurisdiction, "EPSG:900913");
-        var wfs_resp = jurisdiction_wfs.read({
-            async:true,
-            callback: function(response){
-                if(response.priv.responseText){
-                    var json_parser = new OpenLayers.Format.JSON();
-                    jurisdiction_features = json_parser.read(response.priv.responseText);
-                }
-            }
-        });
-    }
-    console.log(jurisdiction_features);
-}
-
 function removeHighlight(georef, vec_layer){
     var index= find_georef(tile_list, georef);
     vec_layer.removeFeatures([tile_list[index].feature]);
@@ -289,20 +272,12 @@ Ext.onReady(function (){
     var jurisdiction_filter=null;
 
     if(jurisdiction != "" ){
-        jurisdiction_layer = new OpenLayers.Layer.WMS(
-            "Jurisdiction Layer", geoserver+"geonode/wms",
-            {
-                LAYERS: "{{jurisdiction}}",
-                format: "image/png",
-                transparent: true
-            },
-            {
-                buffer: 0,
-                displayOutsideMaxExtent: true,
-                isBaseLayer: false,
-                projection: "EPSG:900913",
-                visibility: false
-            }
+        jurisdiction_layer = new OpenLayers.Layer.Vector(
+            jurisdiction, 
+            strategies: [new OpenLayers.Strategy.BBOX()],
+            protocol: wfs_proto_creator(jurisdiction, "EPSG:900913"),
+            visibility: false,
+            isBaseLayer: false
         );
         map.addLayer(jurisdiction_layer);
         console.log(jurisdiction_layer);
