--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -169,7 +169,8 @@ function wfs_proto_creator(layer_request, srs){
         featureType: layer_request,
         featureNS: "http://www.geonode.org/",
         srsName: srs,
-        outputFormat: "json"
+        outputFormat: "json",
+        async: true
     });
 }
 
@@ -273,33 +274,23 @@ Ext.onReady(function (){
     var jurisdiction_filter=null;
 
     if(jurisdiction != "" ){
-        jurisdiction_layer = new OpenLayers.Layer.Vector(
-            jurisdiction, 
-            {
-                strategies: [ new OpenLayers.Strategy.BBOX() ],
-                protocol: OpenLayers.Protocol.WFS({
-                        version: "1.0.0",
-                        url: geoserver+"geonode/wfs",
-                        featurePrefix: "geonode",
-                        featureType: "{{feature_juris}}",
-                        featureNS: "http://www.geonode.org/",
-                        srsName: "EPSG:900913",
-                        outputFormat: "json",
-                        extractAttributes: true
-                    }),
-                visibility: true,
-                transparent: true,
-                isBaseLayer: false
+        var juris_wfs = wfs_proto_creator("{{feature_juris}}", "EPSG:4326");
+        
+        juris_wfs.read({
+          callback: function(response){
+                if (response.priv.responseText){
+                    var json_parser = new OpenLayers.Format.JSON();
+                    var feature_out = json_parser.read(response.priv.responseText);
+
+                    for ( var i=0; i<feature_out.totalFeatures; i++ ){
+                        jurisdiction_features.push(feature_out.features[i]);
+                        console.log(jurisdiction_features[i]);
+                    }
+                }  
+            }
         });
-        map.addLayer(jurisdiction_layer);
-        console.log(jurisdiction_layer);
-        console.log(jurisdiction_layer.getExtent());
-        console.log(jurisdiction_layer.features);
-        /*jurisdiction_filter = new OpenLayers.Filter.Spatial({
-                type: OpenLayers.Filter.Spatial.INTERSECTS,
-                property: "the_geom",
-                value: jurisdiction_layer.getExtent().toGeometry()
-            });*/
+        
+        
     }
     
     var tile_layer = new OpenLayers.Layer.WMS(
@@ -319,10 +310,6 @@ Ext.onReady(function (){
             maxExtent: new OpenLayers.Bounds(stored_layer["bbox"])
         } 
     );
-    
-    if(jurisdiction != "" ){
-        tile_layer.params["FILTER"]=jurisdiction_filter;
-    }
     
     map.addLayer(tile_layer);
     
