--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -222,8 +222,6 @@ var jurisdiction = "{{jurisdiction}}";
 var jurisdiction_layer = null;
 var jurisdiction_features = [];
 
-console.log("{{jurisresource}}");
-
 function removeHighlight(georef, vec_layer){
     var index= find_georef(tile_list, georef);
     vec_layer.removeFeatures([tile_list[index].feature]);
@@ -288,10 +286,9 @@ Ext.onReady(function (){
                     }
                 }  
             }
-        });
-        
-        
+        }); 
     }
+    console.log(jurisdiction_features);
     
     var tile_layer = new OpenLayers.Layer.WMS(
         layer_name + "- Tiled", geoserver+"geonode/wms",
@@ -410,12 +407,6 @@ Ext.onReady(function (){
     drawControl.activate();
 
     app = new GeoExt.MapPanel(config);
-    
-    if(jurisdiction != "" ){
-       map.zoomToExtent(jurisdiction_layer.getExtent());
-    }else{
-        map.zoomToExtent(tile_layer.getExtent());
-    }
 
 });
 {% endautoescape %}
