--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -270,6 +270,7 @@ Ext.onReady(function (){
     var stored_layer = map_options["layers"].filter(function(l){ return l["name"] == layer_name })[0];
     var source_index = stored_layer["source"];
     var jurisdiction_filter=null;
+    var jurisdiction_extent=new OpenLayers.Bounds();
 
     if(jurisdiction != "" ){
         var juris_wfs = wfs_proto_creator("{{feature_juris}}", "EPSG:4326");
@@ -281,14 +282,13 @@ Ext.onReady(function (){
                     var feature_out = json_parser.read(response.priv.responseText);
 
                     for ( var i=0; i<feature_out.totalFeatures; i++ ){
-                        jurisdiction_features.push(feature_out.features[i]);
+                        jurisdiction_features.push(new OpenLayers.Geometry.MultiPolygon(feature_out.features[i].geometry));
                         console.log(jurisdiction_features[i]);
                     }
                 }  
             }
         }); 
     }
-    console.log(jurisdiction_features);
     
     var tile_layer = new OpenLayers.Layer.WMS(
         layer_name + "- Tiled", geoserver+"geonode/wms",
@@ -407,7 +407,11 @@ Ext.onReady(function (){
     drawControl.activate();
 
     app = new GeoExt.MapPanel(config);
-
+    if(jurisdiction != "" ){
+        map.zoomToExtent();
+    }else{
+        map.zoomToExtent(tile_layer.getExtent());
+    }
 });
 {% endautoescape %}
 </script>
