--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -278,11 +278,11 @@ Ext.onReady(function (){
         juris_wfs.read({
           callback: function(response){
                 if (response.priv.responseText){
-                    var json_parser = new OpenLayers.Format.JSON();
+                    var json_parser = new OpenLayers.Format.GeoJSON();
                     var feature_out = json_parser.read(response.priv.responseText);
 
                     for ( var i=0; i<feature_out.totalFeatures; i++ ){
-                        jurisdiction_features.push(new OpenLayers.Geometry.MultiPolygon(feature_out.features[i].geometry.coordinates[0]));
+                        jurisdiction_features.push(json_parser.parserCoords.multipolygon(feature_out.features[i].geometry.coordinates[0]));
                         console.log(feature_out.features[i]);
                         console.log(jurisdiction_features[i]);
                     }
