--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -283,7 +283,7 @@ Ext.onReady(function (){
 
                     for ( var i=0; i<feature_out.totalFeatures; i++ ){
                         jurisdiction_features.push(json_parser.parseCoords.multipolygon(feature_out.features[i].geometry.coordinates[0]));
-                        console.log(feature_out.features[i]);
+                        console.log(jurisdiction_features[i]);
                     }
                 }  
             }
