--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -279,12 +279,13 @@ Ext.onReady(function (){
           callback: function(response){
                 if (response.priv.responseText){
                     var json_parser = new OpenLayers.Format.GeoJSON();
-                    var feature_out = json_parser.read(response.priv.responseText);
-
-                    for ( var i=0; i<feature_out.totalFeatures; i++ ){
+                    var feature_out = json_parser.parseCoords.multipolygon(response.priv.responseText);
+                    console.log(feature_out);
+                    /*for ( var i=0; i<feature_out.totalFeatures; i++ ){
                         jurisdiction_features.push(json_parser.parseCoords.multipolygon(feature_out.features[i].geometry.coordinates[0]));
+                        console.log(feature_out.features[i]);
                         console.log(jurisdiction_features[i]);
-                    }
+                    }*/
                 }  
             }
         }); 
