--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -280,9 +280,9 @@ Ext.onReady(function (){
                 if (response.priv.responseText){
                     var json_parser = new OpenLayers.Format.GeoJSON();
                     var feature_out = json_parser.read(response.priv.responseText);
-                    //console.log(feature_out);
+                    console.log(feature_out);
                     for ( var i=0; i<feature_out.totalFeatures; i++ ){
-                        jurisdiction_features.push(json_parser.parseCoords.multipolygon(feature_out.features[i].geometry.coordinates[0]));
+                        jurisdiction_features.push(json_parser.parseCoords.multipolygon(feature_out.features[i].geometry.coordinates));
                         console.log(feature_out.features[i]);
                         console.log(jurisdiction_features[i]);
                     }
