--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -282,7 +282,7 @@ Ext.onReady(function (){
                     var feature_out = json_parser.read(response.priv.responseText);
                     console.log(feature_out);
                     for ( var i=0; i<feature_out.totalFeatures; i++ ){
-                        jurisdiction_features.push(json_parser.parseCoords.multipolygon(feature_out.features[i].geometry.coordinates));
+                        jurisdiction_features.push(json_parser.parseCoords.linearring(feature_out.features[i].geometry.coordinates));
                         console.log(feature_out.features[i]);
                         console.log(jurisdiction_features[i]);
                     }
