--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -273,19 +273,21 @@ Ext.onReady(function (){
     var jurisdiction_extent=new OpenLayers.Bounds();
 
     if(jurisdiction != "" ){
-        var juris_wfs = wfs_proto_creator("{{feature_juris}}", "EPSG:4326", "json");
+        var juris_wfs = wfs_proto_creator("{{feature_juris}}", "EPSG:4326", "GML");
         
         var response = juris_wfs.read({
           callback: function(response){
                 if (response.priv.responseText){
-                    var json_parser = new OpenLayers.Format.GeoJSON();
-                    var feature_out = json_parser.read(response.priv.responseText);
+                    var parser = new OpenLayers.Format.GeoJSON();
+                    var feature_out =parser.read(response.priv.responseText);
                     console.log(feature_out);
-                    for ( var i=0; i<feature_out.totalFeatures; i++ ){
-                        jurisdiction_features.push(json_parser.parseCoords.linearring(feature_out.features[i].geometry.coordinates));
+                    console.log(parser.parseFeature(feature_out));
+                    /*for ( var i=0; i<feature_out.totalFeatures; i++ ){
+                        //jurisdiction_features.push(parser.parseFeature(feature_out));
+                        console.log(parser.parseFeature(feature_out));
                         console.log(feature_out.features[i]);
                         console.log(jurisdiction_features[i]);
-                    }
+                    }*/
                 }  
             }
         }); 
