--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -282,8 +282,10 @@ Ext.onReady(function (){
                     var feature_out =parser.read(response.priv.responseText);
                     console.log("parser.read: ");
                     console.log(feature_out);
-                    console.log("parser.parse: ");
-                    console.log(parser.parseFeature(feature_out));
+                    
+                    for ( x in feature_out){
+                        console.log(x.geometry);
+                    }
                     /*for ( var i=0; i<feature_out.totalFeatures; i++ ){
                         //jurisdiction_features.push(parser.parseFeature(feature_out));
                         console.log(parser.parseFeature(feature_out));
