--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -280,11 +280,10 @@ Ext.onReady(function (){
                 if (response.priv.responseText){
                     var parser = new OpenLayers.Format.GeoJSON();
                     var feature_out =parser.read(response.priv.responseText);
-                    console.log("parser.read: ");
                     console.log(feature_out);
                     
                     for ( x in feature_out){
-                        console.log(x.geometry);
+                        console.log(x.geometry.components);
                     }
                     /*for ( var i=0; i<feature_out.totalFeatures; i++ ){
                         //jurisdiction_features.push(parser.parseFeature(feature_out));
@@ -295,7 +294,6 @@ Ext.onReady(function (){
                 }  
             }
         }); 
-        console.log(response);
     }
     
     var tile_layer = new OpenLayers.Layer.WMS(
